# Games101-Homework

./: README.md
freetype/objs/Win32/Debug/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.lib  freetype.vcxproj.FileListAbsolute.txt  ftver.res
freetype/objs/Win32/Debug/freetype.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  freetype.lastbuildstate  freetype.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
freetype/objs/Win32/Release/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.vcxproj.FileListAbsolute.txt
freetype/objs/x64/Debug/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.vcxproj.FileListAbsolute.txt
freetype/objs/x64/Release/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.lib  freetype.vcxproj.FileListAbsolute.txt  ftver.res
opencv/include/opencv2/: cvconfig.h
opencv/lib/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_world450.lib  opencv_world450d.lib
pa0/: CMakeLists.txt  main.cpp
pa1/: CMakeLists.txt  main.cpp  rasterizer.cpp
pa2/: CMakeLists.txt  main.cpp  rasterizer.cpp
pa3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
pa4/: CMakeLists.txt  main.cpp
pa5/: CMakeLists.txt  Renderer.cpp  Sphere.hpp  Triangle.hpp  main.cpp
pa6/: BVH.cpp  Bounds3.hpp  Ray.hpp  Renderer.cpp  Triangle.hpp
pa7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
pa8/src/: rope.cpp
(+31 files in other folders)
